# libnumeric

./: CMakeLists.txt
Applications/: CMakeLists.txt
Applications/Definitions/: CMakeLists.txt  functors.hpp
Applications/NumericalIntegration/: CMakeLists.txt  GaussLegendre.hpp  common.hpp
Applications/NumericalIntegration/tests/: testGaussLegendre.cpp
Applications/ODEIntegration/: CMakeLists.txt  OdeDynamics.hpp  RungeKutta45.cpp  RungeKutta45.hpp
Applications/ODEIntegration/tests/: harmonic_oscillator.cpp
Libraries/: CMakeLists.txt
Libraries/Matrix/: CMakeLists.txt  matrix.hpp  matrixBase.hpp  operationsNoBlas.hpp  operators.hpp
Libraries/Matrix/tests/: testMatrix.cpp
Libraries/Random/: RngStreams.hpp
Libraries/Vector/: CMakeLists.txt  common.hpp  memory.hpp  operationsBlas.hpp  operationsNoBlas.hpp  operators.hpp  vector.hpp  vectorBase.hpp  vectorOperations.cpp  vectorOperations.hpp
Libraries/Vector/tests/: testVector.cpp
